<resources>
    <string name="app_name">ProjectX_FoodMania</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Description">asaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>

    <string name="TextPassword">Your Password</string>
    <string name="TextEmail">Email</string>
    <string name="TextForgetPassword">ForgetPassword</string>
    <string name="TextLogin">Login</string>
    <string name="HintPassword">Password</string>
    <string name="HintEmail">  Email</string>
    <string name="TextRegister">Register</string>
    <string name="Hint_full_name">Full Name</string>
</resources>